--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "debug": "^2.6.1",
     "deepmerge": "^1.3.2",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "koa": "^1.2.5",
+    "koa-body": "^1.6.0",
+    "koa-router": "^5.4.0"
   }
 }
