--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "japi",
+  "name": "japis",
   "version": "1.0.0",
-  "description": "",
+  "description": "REST API generator (for koa framework)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: not yet test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Francesco Sirocco frncscsrcc@gmail.com",
   "license": "ISC",
   "dependencies": {
     "debug": "^2.6.1",
     "deepmerge": "^1.3.2",
-    "fs": "0.0.1-security",
     "koa": "^1.2.5",
     "koa-body": "^1.6.0",
     "koa-router": "^5.4.0"
