--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "test": "echo \"Error: not yet test specified\" && exit 1"
   },
-  "author": "Francesco Sirocco frncscsrcc@gmail.com",
+  "repository" : { 
+    "type" : "git", 
+    "url" : "https://github.com/frncscsrcc/japis.git"
+  },
+  "author": {
+    "name": "Francesco Sirocco",
+    "email": "frncscsrcc@gmail.com"
+  },
   "license": "ISC",
   "dependencies": {
     "debug": "^2.6.1",
